--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -11,7 +11,6 @@ export interface Props {
   canonicalURL?: string;
   pubDatetime?: Date;
   modDatetime?: Date | null;
-  scrollSmooth?: boolean;
 }
 
 const {
@@ -22,7 +21,6 @@ const {
   canonicalURL = new URL(Astro.url.pathname, Astro.site).href,
   pubDatetime,
   modDatetime,
-  scrollSmooth = false,
 } = Astro.props;
 
 const title = _title ? `${_title} - ${SITE.title}` : SITE.title;
@@ -97,6 +95,7 @@ const socialImageURL = new URL(
     {
       SITE.umamiWebsiteID && (
         <script
+          is:inline
           defer
           src="https://cloud.umami.is/script.js"
           data-website-id={SITE.umamiWebsiteID}
