fix: title bug.

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -14,7 +14,7 @@ export interface Props {
 }
 
 const {
-  title: _title = SITE.title,
+  title: _title,
   author = SITE.author,
   description = SITE.desc,
   ogImage = SITE.ogImage,
