--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -7,6 +7,7 @@ import { SITE } from "@config";
 import { normalize } from "path";
 import { Image } from "astro:assets";
 import Giscus from "@giscus/react";
+import { formatDate } from "@utils/date";
 
 export type Props = {
     post: CollectionEntry<"blog">;
@@ -17,11 +18,6 @@ export type Props = {
 const { post, file, path } = Astro.props;
 
 const { Content } = await post.render();
-
-const formatDate = (date: Date) => {
-    // format as 2021-01-01
-    return date.toISOString().split("T")[0];
-};
 
 const metaDate =
     formatDate(post.data.pubDate) +
